web-infras/parser/tests/fixtures/esprima/declaration/function/dupe-param/output.txt
[SyntaxError]: duplicate params (1,15)
1|function a(x, x) {'use strict';}
 |             ^
